--- a/ang-material-books/src/app/book/book-list/book-list.component.html
+++ b/ang-material-books/src/app/book/book-list/book-list.component.html
@@ -1,26 +1,29 @@
-<table mat-table [dataSource]="dataSource">
+<div>
+  <a [routerLink]="['/book/create']" mat-button color="primary">Cadastrar Livro</a>
+</div>
+<table mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef> Titulo </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Titulo </th>
     <td mat-cell *matCellDef="let element"> {{element.title}} </td>
   </ng-container>
 
   <ng-container matColumnDef="company">
-    <th mat-header-cell *matHeaderCellDef> Editora </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Editora </th>
     <td mat-cell *matCellDef="let element"> {{element.company}} </td>
   </ng-container>
 
   <ng-container matColumnDef="edition">
-    <th mat-header-cell *matHeaderCellDef> Edição </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Edição </th>
     <td mat-cell *matCellDef="let element"> {{element.edition}} </td>
   </ng-container>
 
   <ng-container matColumnDef="publishYear">
-    <th mat-header-cell *matHeaderCellDef> Ano Publicação </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Ano Publicação </th>
     <td mat-cell *matCellDef="let element"> {{element.publishYear}} </td>
   </ng-container>
 
   <ng-container matColumnDef="value">
-    <th mat-header-cell *matHeaderCellDef> Valor </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
     <td mat-cell *matCellDef="let element"> {{element.value}} </td>
   </ng-container>
 
@@ -54,3 +57,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+<mat-paginator [pageSize]="10" [pageSizeOptions]="[2, 4, 6, 10, 20]">
+</mat-paginator>
